<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ninjamonster.a24fun.fragments.GameFragment">

    <Button
        android:id="@+id/numeric_one"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/empty"
        android:textSize="@dimen/button_text"
        android:layout_marginStart="16dp"
        tools:layout_editor_absoluteY="240dp"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/numeric_two"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/empty"
        android:textSize="@dimen/button_text"
        tools:layout_editor_absoluteY="240dp"
        tools:layout_editor_absoluteX="111dp" />

    <Button
        android:id="@+id/numeric_three"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/empty"
        android:textSize="@dimen/button_text"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/clear_button"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="41dp"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/numeric_four"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/empty"
        android:textSize="@dimen/button_text"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/numeric_two"
        app:layout_constraintBaseline_toBaselineOf="@+id/numeric_three"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/numeric_two" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="33dp"
        android:text="@string/plus_operator"
        android:textSize="@dimen/button_text"
        tools:layout_editor_absoluteY="240dp"
        tools:layout_editor_absoluteX="191dp" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/minus_operator"
        android:textSize="@dimen/button_text"
        android:layout_marginEnd="9dp"
        tools:layout_editor_absoluteY="240dp"
        tools:layout_editor_absoluteX="267dp" />

    <Button
        android:id="@+id/multiply_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/multiply_operator"
        android:textSize="@dimen/button_text"
        tools:layout_editor_absoluteY="355dp"
        tools:layout_editor_absoluteX="191dp" />

    <Button
        android:id="@+id/divide_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/divide_operator"
        android:textSize="@dimen/button_text"
        tools:layout_editor_absoluteY="355dp"
        tools:layout_editor_absoluteX="267dp" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clear"
        android:textSize="@dimen/button_text"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/numeric_three"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="17dp"
        app:layout_constraintLeft_toLeftOf="@+id/numeric_three" />

    <Button
        android:id="@+id/change_button_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Numbers"
        android:textSize="@dimen/button_text"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="27dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="27dp" />

    <TextView
        android:id="@+id/display_text_view"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="@dimen/button_text"
        android:gravity="center_vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="29dp"
        app:layout_constraintRight_toRightOf="@+id/change_button_number"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/timer_text_view"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="29dp" />

    <TextView
        android:id="@+id/timer_text_view"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="00:00:00"
        android:textSize="@dimen/button_size"
        android:gravity="center_vertical|center_horizontal"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/display_text_view"
        android:layout_marginTop="69dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/display_text_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/result_test_view"
        android:layout_width="149dp"
        android:layout_height="53dp"
        android:text="result_text_view"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/timer_text_view"
        android:layout_marginTop="4dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/timer_text_view"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="0dp" />


</android.support.constraint.ConstraintLayout>